syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "OrderReturnProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Return
message ReturnHeaderFlatData {
    option (routines.entity_type) = "ReturnHeader";
    option (routines.keys).keys = "return_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnId
    string return_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string return_header_type_id = 2 [(routines.opts).field_type = "id"];
    string status_id = 3 [(routines.opts).field_type = "id"];
    string created_by = 4 [(routines.opts).field_type = "id-vlong"];
    string from_party_id = 5 [(routines.opts).field_type = "id"];
    string to_party_id = 6 [(routines.opts).field_type = "id"];
    string payment_method_id = 7 [(routines.opts).field_type = "id"];
    string fin_account_id = 8 [(routines.opts).field_type = "id"];
    string billing_account_id = 9 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp entry_date = 10 [(routines.opts).field_type = "date-time"];
    string origin_contact_mech_id = 11 [(routines.opts).field_type = "id"];
    string destination_facility_id = 12 [(routines.opts).field_type = "id"];
    routines.Indicator needs_inventory_receive = 13 [(routines.opts).field_type = "indicator"];
    string currency_uom_id = 14 [(routines.opts).field_type = "id"];
    string supplier_rma_id = 15 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 16 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 17 [(routines.opts).field_type = "date-time"];
    string tenant_id = 18 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 42;
    map<string, google.protobuf.Any> attachments = 43 ;
}

message ReturnHeaderKey{
    string return_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ReturnHeaderList{
    repeated ReturnHeaderFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListReturnHeaders` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Return Item
message ReturnItemData {
    option (routines.entity_type) = "ReturnItem";
    option (routines.keys).keys = "return_id, return_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnId, returnItemSeqId
    // fields
    string return_id = 1 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 2 [(routines.opts).field_type = "id"];
    string return_reason_id = 3 [(routines.opts).field_type = "id"];
    string return_type_id = 4 [(routines.opts).field_type = "id"];
    string return_item_type_id = 5 [(routines.opts).field_type = "id"];
    string product_id = 6 [(routines.opts).field_type = "id"];
    string description = 7 [(routines.opts).field_type = "description"];
    string order_id = 8 [(routines.opts).field_type = "id"];
    string order_item_seq_id = 9 [(routines.opts).field_type = "id"];
    string status_id = 10 [(routines.opts).field_type = "id"];
    string expected_item_status = 11 [(routines.opts).field_type = "id"];
    routines.FixedPoint return_quantity = 12 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint received_quantity = 13 [(routines.opts).field_type = "fixed-point"];
    routines.Currency return_price = 14 [(routines.opts).field_type = "currency-amount"];
    string return_item_response_id = 15 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 16 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 17 [(routines.opts).field_type = "date-time"];
    string id = 18 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 35;
    map<string, google.protobuf.Any> attachments = 36;
}


message ReturnItemKey{
    string return_id = 1 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 2 [(routines.opts).field_type = "id"];
}

message ReturnItemList{
    repeated ReturnItemData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListReturnItems` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


